@@ -7768,6 +7768,162 @@ RES ROUNDED AWAY = +000068095
 
 AT_CLEANUP
 
+AT_SETUP([OSVS Arithmetic Test (3)])
+AT_KEYWORDS([OSVS])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+
+       01 PERCENT    PIC S9(03)V99.
+       01 AMOUNT     PIC S9(11)V99.
+       01 RESULT     PIC S9(11)V99.
+       01 D-RESULT   PIC -9(5).99.
+       01 D-MSG      PIC X(37) VALUE " ".
+       01 D-RND      PIC X(4)  VALUE " ".
+       01 X-RSLT     PIC S9(5).
+       01 NUM-A      PIC 9(3) VALUE 399.
+       01 NUM-B      PIC 9(3) VALUE 211.
+       01 NUMV1      PIC 9(3)V9.
+       01 RSLT       PIC 9(3).
+       01 RSLTV1     PIC 9(3).9.
+
+       LOCAL-STORAGE SECTION.
+       PROCEDURE DIVISION.
+
+           DISPLAY '-- TEST COMPUTE WITH ROUNDING --'
+  
+           MOVE 24 TO PERCENT
+           MOVE 123.45 TO AMOUNT
+           DISPLAY ' AMOUNT:  123.45 '
+                   ' PERCENT: 24'
+  
+           DISPLAY "  ALL TESTS HAVE COMPUTE ROUNDED EXCEPT 'NR:'"
+  
+           MOVE 'AMOUNT + (AMOUNT * PERCENT / 100)' TO D-MSG
+           COMPUTE RESULT ROUNDED = AMOUNT + (AMOUNT * PERCENT / 100)
+           PERFORM SHOW-IT.
+  
+           MOVE 'PERCENT / 100 * AMOUNT + AMOUNT' TO D-MSG
+           COMPUTE RESULT ROUNDED = PERCENT / 100 * AMOUNT + AMOUNT
+           PERFORM SHOW-IT.
+  
+           MOVE 'NR:' TO D-RND
+           MOVE 'PERCENT / 100 * AMOUNT + AMOUNT' TO D-MSG
+           COMPUTE RESULT = PERCENT / 100 * AMOUNT + AMOUNT
+           PERFORM SHOW-IT.
+  
+           MOVE '(AMOUNT * PERCENT / 100) + AMOUNT' TO D-MSG
+           COMPUTE RESULT ROUNDED = (AMOUNT * PERCENT / 100) + AMOUNT
+           PERFORM SHOW-IT.
+  
+           MOVE '(123.45 * 24 / 100) + 123.45' TO D-MSG
+           COMPUTE RESULT ROUNDED = (123.45 * 24 / 100) + 123.45
+           PERFORM SHOW-IT.
+  
+           MOVE '123.45 + (123.45 * 24 / 100)' TO D-MSG
+           COMPUTE RESULT ROUNDED = 123.45 + (123.45 * 24 / 100)
+           PERFORM SHOW-IT.
+  
+           MOVE 'NR:' TO D-RND
+           MOVE '123.45 + (123.45 * 24 / 100)' TO D-MSG
+           COMPUTE RESULT = 123.45 + (123.45 * 24 / 100)
+           PERFORM SHOW-IT.
+  
+           MOVE '(AMOUNT * PERCENT / 100) ' TO D-MSG
+           COMPUTE RESULT = (AMOUNT * PERCENT / 100)
+           PERFORM SHOW-IT.
+  
+           MOVE '(AMOUNT * PERCENT / 100) ROUNDED' TO D-MSG
+           COMPUTE RESULT ROUNDED = (AMOUNT * PERCENT / 100)
+           PERFORM SHOW-IT.
+  
+           MOVE 399 TO NUMV1.
+           MOVE 211 TO NUM-B.
+           COMPUTE X-RSLT = ((NUMV1 / (101 - 1))
+                          -  (NUM-B / (10 * 10))) * (200 / 2)
+           IF ((NUMV1 / (101 - 1))
+                -  (NUM-B / (10 * 10))) * (200 / 2) EQUAL 188
+               DISPLAY "Not Using ARITHMETIC-OSVS: " X-RSLT
+           ELSE
+               DISPLAY "Using ARITHMETIC-OSVS: " X-RSLT
+           END-IF.                          
+  
+           COMPUTE X-RSLT ROUNDED = ((NUMV1 / (101 - 1))
+                          -  (NUM-B / (10 * 10))) * (200 / 2)
+           IF ((NUMV1 / (101 - 1))
+                -  (NUM-B / (10 * 10))) * (200 / 2) EQUAL 188
+               DISPLAY "Not Using ARITHMETIC-OSVS: " X-RSLT
+           ELSE
+               DISPLAY "Using ARITHMETIC-OSVS: " X-RSLT
+           END-IF.                          
+  
+           COMPUTE RSLTV1, RSLT = ((NUM-A / 100) - (NUM-B / 100)) * 100
+           DISPLAY 'Simple   RSLT    IS ' RSLT
+                           ' RSLTv9  IS ' RSLTV1.
+
+           COMPUTE RSLTV1, RSLT = ((NUM-A / (100.55 + -0.550))
+                                -  (NUM-B / (10.11 * 10 - 1.1)))
+                                  * (220 / 2.2)
+           DISPLAY 'Complex  RSLT    IS ' RSLT
+                           ' RSLTv9  IS ' RSLTV1.
+
+           DISPLAY '-- TEST FINISHED --'.
+
+           STOP RUN.
+
+       SHOW-IT.
+           MOVE RESULT TO D-RESULT
+           DISPLAY D-RND D-MSG ' = ' D-RESULT.
+           MOVE SPACES TO D-RND.
+])
+
+AT_CHECK([$COBC -x -std=ibm -farithmetic-osvs -w prog.cob ], [0], [], [])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [-- TEST COMPUTE WITH ROUNDING --
+ AMOUNT:  123.45  PERCENT: 24
+  ALL TESTS HAVE COMPUTE ROUNDED EXCEPT 'NR:'
+    AMOUNT + (AMOUNT * PERCENT / 100)     =  00153.08
+    PERCENT / 100 * AMOUNT + AMOUNT       =  00153.08
+NR: PERCENT / 100 * AMOUNT + AMOUNT       =  00153.07
+    (AMOUNT * PERCENT / 100) + AMOUNT     =  00153.08
+    (123.45 * 24 / 100) + 123.45          =  00153.08
+    123.45 + (123.45 * 24 / 100)          =  00153.08
+NR: 123.45 + (123.45 * 24 / 100)          =  00153.07
+    (AMOUNT * PERCENT / 100)              =  00029.62
+    (AMOUNT * PERCENT / 100) ROUNDED      =  00029.63
+Using ARITHMETIC-OSVS: 00180+
+Using ARITHMETIC-OSVS: 00180+
+Simple   RSLT    IS 180 RSLTv9  IS 180.0
+Complex  RSLT    IS 188 RSLTv9  IS 188.0
+-- TEST FINISHED --
+], [])
+
+AT_CHECK([$COBC -x -std=ibm -w -fno-arithmetic-osvs prog.cob ], [0], [], [])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [-- TEST COMPUTE WITH ROUNDING --
+ AMOUNT:  123.45  PERCENT: 24
+  ALL TESTS HAVE COMPUTE ROUNDED EXCEPT 'NR:'
+    AMOUNT + (AMOUNT * PERCENT / 100)     =  00153.08
+    PERCENT / 100 * AMOUNT + AMOUNT       =  00153.08
+NR: PERCENT / 100 * AMOUNT + AMOUNT       =  00153.07
+    (AMOUNT * PERCENT / 100) + AMOUNT     =  00153.08
+    (123.45 * 24 / 100) + 123.45          =  00153.08
+    123.45 + (123.45 * 24 / 100)          =  00153.08
+NR: 123.45 + (123.45 * 24 / 100)          =  00153.07
+    (AMOUNT * PERCENT / 100)              =  00029.62
+    (AMOUNT * PERCENT / 100) ROUNDED      =  00029.63
+Not Using ARITHMETIC-OSVS: 00188+
+Not Using ARITHMETIC-OSVS: 00188+
+Simple   RSLT    IS 188 RSLTv9  IS 188.0
+Complex  RSLT    IS 188 RSLTv9  IS 188.0
+-- TEST FINISHED --
+], [])
+
+AT_CLEANUP
+
 
 AT_SETUP([SET CONSTANT directive])
 AT_KEYWORDS([misc directives extensions])
